--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,500;0,600;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/Frame.png" type="image/png">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Gamer</title>
 </head>
 <body>
-    
+    <header class="main-header">
+            <nav class="header">
+            <div class="nav-logo">
+            <img class="nav-icon" src="images/Frame.png" alt="">
+            <h3 class="nav-title"> <span class="nav-span">G</span>amer</h3>
+            </div>
+            
+                <ul class="nav-btn">
+                    <li>About Us</li>
+                    <li>Developers</li>
+                    <li class="nav-border">Follow us on <i class="fa-brands fa-youtube" style="color: #df010c;"></i> <i class="fa-brands fa-tiktok" style="color: #0c121d;"></i></li>
+                </ul>
+            </nav>
+        <div class="header-container">
+           <div class="header-content">
+            <h1 class="header-title">Play Like The</h1>
+            <h1 class="header-name">G.O.A.T.</h1>
+            <p class="header-descripton"><i class="fa-regular fa-circle-play" style="color: #ff42af;"></i> 1-Click instant play</p>
+            <p class="header-descripton"><i class="fa-regular fa-circle-down" style="color: #ff42a5;"></i> No Download</p>
+            <p class="header-descripton"><i class="fa-solid fa-people-arrows" style="color: #101e37;"></i> 1000s of supported online games</p>
+            <button class="header-pink">SIGN IN</button>
+            <button class="header-blue">GO ROGUE</button>
+        </div>
+        <div class="header-img">
+            <img src="images/Group 18.png" alt="">
+        </div>
+    </div>
+    </header>
+    <main>
+        sec
+    </main>
+    <footer></footer>
 </body>
 </html>
