--- a/index.html
+++ b/index.html
@@ -41,8 +41,80 @@
     </div>
     </header>
     <main>
-        sec
+
+
+        <section class="online-games">
+            <div class="online-games-content">
+                <h3 class="online-games-title">Online Games <span class="online-span">Funny Videos</span></h3>
+                <p class="online-games-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+
+            <div class="card">
+            <div class="card1">
+                <img src="images/Rectangle 4.png" alt="">
+                <p class="card1d">No Download. No Installs. Play <br> games Instantly on Gamer.</p>
+            </div>
+            <div class="card1">
+                <img src="images/Rectangle 5.png" alt="">
+                <p class="card2d">Did you score? #unblockedgames <br>#school</p>
+            </div>
+            <div class="card1">
+                <img src="images/Rectangle 6.png" alt="">
+                <p class="card1d">Breaking game records like OG</p>
+            </div>
+            <div class="card1">
+                <img src="images/Rectangle 7.png" alt="">
+                <p class="card1d">Busted gaming on school laptop, <br>but you are still lit.</p>
+            </div>
+            </div>
+        </section>
+
+        <section class="play">
+            <div class="play-content">
+                <h3 class="play-title"><span class="play-span">Play Instantly,</span><br>No Downloads <br>No Installs.</h3>
+                <p class="play-description">Play games online for free without <br> downloading. Just click the Play button <br>
+                and play instantly in your browser.</p>
+            </div>
+            <div class="play-img">
+                <img src="images/Rectangle 55.png" alt="">
+            </div>
+        </section>
+
+        <section class="btn-container">
+            <div class="line-btn">
+                <div class="btn"><img src="images/Rectangle 11.png" alt=""><h6>Action Games</h6></div>
+                <div class="btn"><img src="images/Rectangle 12.png" alt=""><h6>Adventure Games</h6></div>
+                <div class="btn"><img src="images/Rectangle 13.png" alt=""><h6>Arcade Games</h6></div>
+                <div class="btn"><img src="images/Rectangle 14.png" alt=""><h6>Educational Games</h6></div>
+                <div class="btn"><img src="images/Rectangle 15.png" alt=""><h6>Word Games</h6></div>
+                <div class="btn"><img src="images/Rectangle 16.png" alt=""><h6>Role Palying Games</h6></div>
+                <div class="btn"><img src="images/Rectangle 17.png" alt=""><h6>Music & Audio Games</h6></div>
+                <div class="btn"><img src="images/Rectangle 18.png" alt=""><h6>Puzzle Games</h6></div>
+                <div class="btn"><img src="images/Rectangle 19.png" alt=""><h6>Strategy Games</h6></div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div id="footer-logo" class="nav-logo">
+            <img class="nav-icon" src="images/Frame.png" alt="">
+            <h3 id="f-title" class="nav-title"> <span class="nav-span">G</span>amer</h3>
+            </div>
+            <div class="fcontent-container">
+            <h3 class="f-content">Our Story</h3>
+            <h3 class="f-content">Games</h3>
+            <h3 class="f-content">Web Games</h3>
+            <h3 class="f-content">Careers</h3>
+            <h3 class="f-content">Supports</h3>
+            <h3 class="f-content">My Account</h3>
+        </div>
+
+        <div class="fotter-icon">
+            <i class="fa-brands fa-twitter" style="color: #fafafa;"></i>
+            <i class="fa-brands fa-linkedin-in" style="color: #fafafa;"></i>
+            <i class="fa-brands fa-instagram" style="color: #fafafa;"></i>
+        </div>
+
+        <p class="copy">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+    </footer>
 </body>
 </html>
