--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                 and play instantly in your browser.</p>
             </div>
             <div class="play-img">
-                <img src="images/Rectangle 55.png" alt="">
+                <img class="play-img-main" src="images/Rectangle 55.png" alt="">
+                <div class="play-image-scale"><img src="images/Rectangle 66.png" alt=""></div>
+                
             </div>
         </section>
 
